removed almost all deprecations when calling external libraries